sandbox/output
StockProfit.hpp:7:1: error: treating Unicode character as whitespace [-Werror,-Wunicode-whitespace]
 
^
1 error generated.
make: *** [StockProfit.compiled_hpp] Error 1
